hphp/test/slow/function_no_param_modifier.php.expectf
HipHop Fatal error: syntax error, unexpected T_PUBLIC, expecting '&' or T_VARIABLE in %s on line 6
